--- a/roles/authelia/files/users_database.yml
+++ b/roles/authelia/files/users_database.yml
@@ -7,5 +7,4 @@ users:
     password: "$argon2id$v=19$m=65536,t=3,p=4$pF8VPpgRh56pt6p/1WkhDg$GaKK4hFcEaur0wnVKPYAAaXiZ9ipomu3bqjEMvlzPac"
     email: 'funkysloth@disroot.org'
     groups:
-      - 'admins'
-      - 'dev'
+      - 'admin'
