--- a/roles/uptime_kuma/tasks/main.yml
+++ b/roles/uptime_kuma/tasks/main.yml
@@ -7,7 +7,7 @@
     group: "{{ guid }}"
     mode: "0750"
 
-- name: Make sure that SWAG container is created and running
+- name: Make sure that Uptime Kuma container is created and running
   docker_container:
     name: "{{ uptime_kuma_container_name }}"
     image: louislam/uptime-kuma:1
@@ -23,7 +23,7 @@
       - "{{ docker_dir }}/{{ uptime_kuma_container_name }}/data:/app/data"
     restart_policy: unless-stopped
 
-- name: Install the SWAG config files
+- name: Install the Uptime Kuma config files
   ansible.builtin.template:
     src: "{{ uptime_kuma_container_name }}.subdomain.conf.j2"
     dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ uptime_kuma_container_name }}.subdomain.conf"
